# TizWildinEntertainmentHUB

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_PLANS.md  LICENSE  README.md  SECURITY.md  build_macos.sh  build_windows.ps1  docker-compose.yml  lists.json  package_macos.sh  packs.json  plugins.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  hub-build.yml  release.yml
arc_service/: Dockerfile  requirements.txt
arc_service/app/: db.py  main.py
arc_service/app/api/: routes.py
arc_service/app/data/: arc_local_auth.sqlite3  entitlements.mock.json  install_receipts.mock.json  install_scans.mock.json  products.catalog.json  (+4 more)
arc_service/tests/: conftest.py  test_arc.py  test_catalog.py  test_entitlements.py  test_proposals.py  test_seats.py
artifacts/backups/: 20260313T184921Z_testcase.json  20260313T185213Z_testcase.json  20260313T185612Z_testcase.json  20260313T190305Z_testcase.json  20260313T190602Z_testcase.json  20260313T191043Z_testcase.json  20260313T191044Z_support_demo_account.json  20260313T192009Z_testcase.json  20260313T192010Z_support_demo_account.json  20260313T192420Z_support_demo_account.json  20260313T192420Z_testcase.json
artifacts/diagnostics/: demo_account_diagnostics.json
docs/: ARCHITECTURE.md  AUDIT_EVIDENCE.md  BRANCHING_AUDIT_REPORT.md  BRANCHING_STRATEGY.md  BRANCH_EXECUTION_QUEUE.md  BRANCH_PROTECTION_RULES.md  BRANCH_RELEASE_LADDER.md  CATALOG_POLICY.md  ECOSYSTEM_INDEX_OPERATIONS.md  ENGINEERING_AUDIT.md  FILE_INVENTORY.json  HUB_TRUST_SPINE.md  LINK_CHECK_REPORT.json  OPERATOR_RUNBOOK.md  PUBLIC_INDEX_BENCHMARK.json  PUBLIC_INDEX_READINESS_REPORT.md  PUBLIC_INDEX_TOP_TIER_READINESS.md  PUBLIC_LINK_GRAPH.md  PUBLIC_PAGE_DEFAULT.md  PUBLIC_ROADMAP.md  QUICKSTART.md  READINESS.md  RELEASE_CHECKLIST.md  REPOSITORY_READINESS_REPORT.json  SEO_BUILD_REPORT.json  SEO_INDEXING_AUDIT.md  SEO_PROMOTION.md  SEO_TRACTION_PLAN.md  SHIP_NEXT_STEPS.md  SOURCE_INDEXING_SYSTEM.md  SOURCE_REPOSITORY_INDEX.md  SOURCE_SPINE_AUTOSYNC.md  STATE_MODEL.md  STRIPE_NOTES.md  SUBMISSION_ROUTES.md  V1_ABSOLUTE_CLEAN_AUDIT.md  V1_CONFLICT_CLEAN_AUDIT.md  V1_LISTS_TAB_AUDIT.md  V1_SEO_BUTTONS_RESTORED_AUDIT.md  V1_STABLE_RELEASE_CHECKS.md  (+21 more)
docs/data/: lists.json  packs.json  plugins.json
docs/pages/: aether.html  arc-core.html  arc-language-module.html  arc-lucifer-cleanroom-runtime.html  arc-neuron-llmbuilder.html  arc-rar.html  arc-source-spine-arc-core.html  arc-source-spine-arc-language-module.html  arc-source-spine-arc-lucifer-cleanroom-runtime.html  arc-source-spine-arc-neuron-llmbuilder.html  arc-source-spine-arc-rar.html  arc-source-spine-branch.html  arc-source-spine-omnibinary-runtime.html  audio-directory-submission-route.html  awesome-audio-lists.html  awesome-audio-plugins-dev.html  awesome-lists-submission-route.html  awesome-music-platforms.html  awesome-python-audio-science.html  bassmaid.html  branching-strategy-route.html  chainmaid.html  deconstructed-loops-packs-router.html  discovery-lists-and-public-routes-arc-core.html  discovery-lists-and-public-routes-arc-language-module.html  discovery-lists-and-public-routes-arc-lucifer-cleanroom-runtime.html  discovery-lists-and-public-routes-arc-neuron-llmbuilder.html  discovery-lists-and-public-routes-arc-rar.html  discovery-lists-and-public-routes-awesome-audio-lists.html  discovery-lists-and-public-routes-awesome-audio-plugins-dev.html  discovery-lists-and-public-routes-awesome-music-platforms.html  discovery-lists-and-public-routes-awesome-python-audio-science.html  discovery-lists-and-public-routes-deconstructed-loops-packs-router.html  discovery-lists-and-public-routes-freeeq8.html  discovery-lists-and-public-routes-freevox8.html  discovery-lists-and-public-routes-omnibinary-runtime.html  discovery-lists-and-public-routes-tizwildin-io-router.html  discovery-lists-and-public-routes-tizwildin-release-vault.html  ecosystem-file-search.html  ecosystem-search.html  (+119 more)
docs/schemas/: public-index.schema.json  source-index.schema.json
hub_app/: CMakeLists.txt  README.md
hub_app/Source/: ArcClient.cpp  ArcClient.h  GitHubClient.cpp  GitHubClient.h  HubEditor.h  HubProcessor.cpp  HubProcessor.h  HubSettings.cpp  HubSettings.h  Main.cpp  PluginManifest.h  TizHubApplication.cpp  TizHubApplication.h  TizHubMainComponent.cpp  TizHubMainComponent.h
hub_scaffold/: README.md
hub_scaffold/Source/: ArcClient.cpp  ArcClient.h  Main.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TizHubApplication.cpp  TizHubApplication.h  TizHubMainComponent.cpp  TizHubMainComponent.h  TizHubState.h
manifests/: products.catalog.json  stripe.mapping.json
plugin_bridge/: README.md
plugin_bridge/include/: TizPluginBridge.h
plugin_bridge/src/: TizPluginBridge.cpp
schemas/: entitlement.schema.json  product.schema.json  proposal.schema.json
scripts/: backup_state.py  benchmark_public_index.py  build_index_health.py  build_public_index.py  build_search_index.py  build_source_repo_index.py  check_public_links.py  execute_install_plan.py  generate_release_manifest.py  hydrate_source_archives.py  migrate_mock_to_db.py  mock_install_runner.py  restore_state.py  run_arc_demo.sh  score_repository_readiness.py  seed_demo_data.py  sync_source_spine_from_manifests.py  validate_branch_map.py  validate_public_index.py  validate_source_index.py
stripe/: PRODUCTS_TO_CREATE.md  stripe.env.example
(+54 files in other folders)
